--- a/home-page.html
+++ b/home-page.html
@@ -4,39 +4,78 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home-Page</title>
-    <link rel="shortcut icon" href="./assests/images/wed-icon.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assests/images/wed-icon.png"
+      type="image/x-icon"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <input id="input" type="text" placeholder="Enter movie name" />
-    <button id="sub">Submit</button>
+    <!-- <input id="input" type="text" style="display: none;" placeholder="Enter movie name" />
+    <button id="sub" style="display: none;">Submit</button> -->
 
-    <script>
-      let sub = document.getElementById("sub");
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <img
+            src="./assests/images/wed-icon.png"
+            width="40px"
+            height="40px"
+            style="border-radius: 20px"
+            alt=""
+          />
+          <a class="navbar-brand" href="#" style="margin-left: 10px"
+            >The Cineverse</a
+          >
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              id="input"
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button id="sub" class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
 
-      sub.addEventListener("click", (e) => {
-        let input = document.getElementById("input").value;
-        console.log(input);
-        let card = document.createElement("div");
-        card.style.border = "2px solid black";
-        card.style.display = "block";
-        //card.style.height = "100px";
-        card.style.width = "20vw";
-        document.body.appendChild(card);
-
-        fetch(`https://www.omdbapi.com/?t=${input}&apikey=972e8d9b`)
-          .then((res) => res.json()) // Return the JSON response
-          .then((res) => {
-            console.log(res);
-            let post = document.createElement("img");
-            post.setAttribute("src", `${res.Poster}`);
-            post.style.width = "80%";
-            card.append(post);
-            let tle = document.createElement("h4");
-            tle.innerHTML = res.Title;
-            card.append(tle);
-          })
-          .catch((error) => console.error("Error fetching data:", error));
-      });
-    </script>
+    <script src="./home.js"></script>
   </body>
 </html>
