--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       <form id="signin">
         <input id="mail" type="email" placeholder="User Email" required />
         <input type="password" placeholder="User Password" required />
-        <button type="submit">Login</button>
+        <button type="submit">Login</button><br><br>
+        <a href="#" id="reset" style="text-decoration: none; color:rgb(226, 231, 186) " >forget password ?</a>
+
       </form>
 
       <!-- Signup Form -->
@@ -53,13 +55,12 @@
         />
         <button type="submit">Signup</button>
       </form>
-      <a href="#" id="reset" style="text-decoration: none">forget password ?</a>
       <button id="toggle-btn" style="color: rgba(232, 255, 104, 0.993)">
         Don't have an account? Sign up
       </button>
       <button style="background-color: rgb(184, 97, 4)" id="guest">
         GUEST MODE
-      </button>
+      </button>                                                                                                                                                                                                                                                           
     </div>
 
     <!-- JavaScript -->
